Anexado lovedder/objectProperty

--- a/package.json
+++ b/package.json
@@ -14,5 +14,10 @@
     "author": {
         "name": "Edder",
         "email": "lovedder95@gmail.com"
+    },
+    "jspm": {
+        "dependencies": {
+            "lovedder/movi": "github:lovedder/objectProperty@master"
+        }
     }
 }
